--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://static.wixstatic.com/media/e2789b_7266c77da6ff48f6891c783723b66c0b~mv2.png/v1/crop/x_0,y_0,w_450,h_243/fill/w_126,h_68,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Glover Brothers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
